Fix footer link contrast: brighter color for name link

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -28,7 +28,7 @@
   /* Footer */
   --ifm-footer-background-color: #201040;
   --ifm-footer-color: #b0a0d0;
-  --ifm-footer-link-color: #b0a0d0;
+  --ifm-footer-link-color: #ffd0e0;
   --ifm-footer-link-hover-color: #ffd0e0;
   --ifm-footer-title-color: #ffffff;
 }
